rust/macros/tests/invalid/target/rls/debug/deps/double_commas_rs-1803279b0e6591fd.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\double_commas_rs-1803279b0e6591fd.rmeta: double-commas.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\double_commas_rs-1803279b0e6591fd.d: double-commas.rs

double-commas.rs:
